--- a/Definition of database.html
+++ b/Definition of database.html
@@ -10,7 +10,7 @@
  query is defined as a computer programming language used to retrieve information from a database.database is used in many applications as airline reservations, production management functions, medical records in hospitals, and legal records of insurance companies.
  The largest databases are used in many applications as governmental agencies, business organizations, and universities, large database contains texts of such materials as abstracts, reports, legal statutes, wire services, newspapers and journals, encyclopaedias, and catalogs of various kinds.(2)</p>
 <h2 style="font-size:20px">fig 1 :database archife </h2>
-<img src="../MY PIC/2.jpg">
+<img src="2.jpg">
  <p> database has lots of management activities as showen in next list :</p>
  <h1 style="font-size:20px">list 1: database management activities</h1>
  <dl>
