initial commit for html project

--- a/organize information in database.html
+++ b/organize information in database.html
@@ -5,14 +5,14 @@
 </ul> 
 <h1>organize information in database</h1>
 <h2 style="font-size:20px">fig 3 : databases are made of records that descripe information, and fields which is section of record where information stored</h2>
- <img src="../MY PIC/p7.jpg">
+ <img src="7.jpg">
 <p> database let you to choose the way to organize your information to help you while searching for data,but information must be put in order to make it easy to reach it in database .
 thier are many ways to organize database as : 1_linked way , 2_related way  </P>
 <p>cross referencing is defind as database that pulls related information from various field <p>
 <p>when data field are liked and cross referenced search can produce information from more than one database (3) </p>
 <p>relational database is defined as database that store data in collection of related tables as showen in next fig </p>
 <h2 style="font-size:20px">fig 4 : A relationship in database </h2>
- <img src="../MY PIC/p6.jpg">
+ <img src="6.jpg">
  <p>relational database has lots of  advantages ,  Relationships can be added, changed, or deleted on demand, making this database model very flexible 
  which is a major factor in its use for the majority of databases that handle everyday query and reporting needs of businesses, government agencies, and organizations (1) </p>
 </body>
