--- a/store information in database.html
+++ b/store information in database.html
@@ -62,7 +62,7 @@ field contains the smallest unit of meaningful information, called the basic bui
 <p>flat file is defined as the simplest model for storing data that consists of a single, two-dimensional table of data elements.
  Each row in the table is a record, and each column of the table is a field (1) as showen in next fig <p> 
  <h2 style="font-size:20px">fig 2 :examble of flat file</h2>
- <img src="../MY PIC/p5.jpg">
+ <img src="5.jpg">
 
 
 
